cleaning up Update index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </li>
                       
 						<li class="nav-item">
-                            <a class="nav-link" href="#trainingservices">Services</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -87,7 +87,7 @@
             <p>We are cat people!</p>
         </div>
     </section>			
-			<section id="trainingservices" class="d-flex align-items-center">
+			<section id="services" class="d-flex align-items-center">
 			          
             <!-- Card Section -->
 <div class="container mt-5">
