--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-md-4">
             <div class="card">
 			<!-- card: This class creates a flexible and extensible content container. It acts as the main wrapper for the card component, providing styling and structure for the card’s content. -->
-                <img src="blackcat.jpg"  class="card-img-top" alt="blackcat" width="100px" height="100px>
+                <img src="blackcat.jpg"  class="card-img-top" alt="blackcat">
 				<!-- card-img-top: This class is applied to the image within the card. It styles the image to be displayed at the top of the card and ensures it is responsive, adapting to the card’s width. -->
                 <div class="card-body">
 				<!-- card-body: This class wraps the main content of the card, including the title, text, and buttons. It provides appropriate padding and styling to ensure the content is well-organized and visually appealing. -->
@@ -109,7 +109,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="vacuumcat.jpg" class="card-img-top" alt="vacuumcat" width="100px" height="100px>
+                <img src="vacuumcat.jpg" class="card-img-top" alt="vacuumcat">
                 <div class="card-body">
                     <h5 class="card-title">Grooming</h5>
 					<p class="card-text">Book your cat's spa day.</p>
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="socialcat.jpg" class="card-img-top" alt="Socialcat" width="100px" height="100px>
+                <img src="socialcat.jpg" class="card-img-top" alt="Socialcat">
                 <div class="card-body">
                     <h5 class="card-title">Cats are social creatures</h5>
 					<p class="card-text">Sign up for a cat playdate.</p>
