--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" aria-current="page" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" aria-current="page" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
 
@@ -93,6 +93,8 @@
 
         <!-- Home Section -->
         <section id="company" class="d-flex align-items-center">
+            <br>
+            <br>
             <h6>We are cat people!</h6>
             <br>
             <p>Some people don't like cats, but that is not us! Our company specializes in cats and help people who have
