email link update

--- a/index.html
+++ b/index.html
@@ -82,23 +82,29 @@
         </div>
     </nav>
     <main>
+
+        <!-- Hero Section -->
         <section id="hero" class="d-flex align-items-center">
             <div class="container">
+                <div class=container-fuild>
                 <br>
-                <h1>The purrrrfect company</h1>
+                <h1 class="display-5 fw-bold">The purrrrfect company</h1>
                 <br>
                 <br>
+            </div.container-fuild>
             </div>
         </section>
 
         <!-- Home Section -->
-        <section id="company" class="d-flex align-items-center">
+        <section id="company" class="d-flex align-items-center" class=container-sm>
             <br>
             <br>
-            <h6>We are cat people!</h6>
+            <div class=container-fuild></div>
+            <h6 class="display-7 fw-bold">We are cat people!</h6>
             <br>
             <p>Some people don't like cats, but that is not us! Our company specializes in cats and help people who have
                 cats</p>
+            </div>
             <br>
         </section>
 
@@ -166,7 +172,8 @@
     <footer class="text-center">
         <div class="container">
             <p>Liberty Mutual Cohort © 2025</p>
-            <p>Contact us: Lyndsay.may@libertymutual.com</p>
+            <p>Contact me: </p>
+            <a href=mailto:“lyndsay.may@libertymutual.com”>Lyndsay.may@libertymutual.com</a>
         </div>
     </footer>
 </body>
