prettier Contact me link - Update index.html

--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
     <footer class="text-center">
         <div class="container">
             <p>Liberty Mutual Cohort © 2025</p>
-            <p>Contact me: </p>
-            <a href=mailto:“lyndsay.may@libertymutual.com”>Lyndsay.may@libertymutual.com</a>
-        </div>
+            <p>Contact me:<a href="mainto:lyndsay.may@libertymutual.com">lyndsay.may@libertymutual.com</a></p>
+	</div>
     </footer>
 </body>
 
